--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "portable-text-issue",
+  "name": "hello-world",
   "private": true,
-  "version": "1.0.0",
-  "main": "package.json",
-  "license": "UNLICENSED",
   "scripts": {
-    "dev": "sanity dev",
-    "start": "sanity start",
-    "build": "sanity build",
-    "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
-  },
-  "keywords": [
-    "sanity"
-  ],
-  "dependencies": {
-    "@sanity/vision": "^3.35.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "sanity": "^3.35.0",
-    "styled-components": "^6.0.7"
-  },
-  "devDependencies": {
-    "@sanity/eslint-config-studio": "^3.0.1",
-    "@types/react": "^18.0.25",
-    "eslint": "^8.6.0",
-    "prettier": "^3.0.2",
-    "typescript": "^5.1.6"
+    "build": "next build",
+    "dev": "next",
+    "format": "npx prettier --write . --ignore-path .gitignore",
+    "lint": "next lint -- --ignore-path .gitignore",
+    "lint:fix": "npm run format && npm run lint -- --fix",
+    "start": "next start",
+    "type-check": "tsc --noEmit"
   },
   "prettier": {
     "semi": false,
-    "printWidth": 100,
-    "bracketSpacing": false,
     "singleQuote": true
+  },
+  "dependencies": {
+    "@sanity/preview-url-secret": "^1.6.5",
+    "@sanity/react-loader": "^1.9.5",
+    "@sanity/vision": "^3.35.0",
+    "@tailwindcss/typography": "0.5.10",
+    "@tinloof/sanity-studio": "^0.4.0",
+    "classnames": "2.5.1",
+    "next": "14.1.0",
+    "next-sanity": "^8.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sanity": "^3.35.0",
+    "server-only": "0.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.55",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "postcss": "8.4.35",
+    "prettier": "3.2.5",
+    "prettier-plugin-packagejson": "2.4.10",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   }
 }
